@@ -1,5 +1,10 @@
 2017-07-12  Jeremy Bennett  <jeremy.bennett@embecosm.com>
 
+	* server/GdbServer.cpp (GdbServer::rspSetCommand): Make catch
+	friendlier to old compilers.
+
+2017-07-12  Jeremy Bennett  <jeremy.bennett@embecosm.com>
+
 	Prior to GCC 5.0 std::put_time is not supported.
 
 	* server/GdbServer.cpp: Remove using for std::put_time.
